updated swagger comments for APIs
