# src/Controllers/GetAccountDetailsController.go
@@ -8,12 +8,12 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// GetAccountDetails exposes functionality to fetch the details of an account once a user has logged in.
+// GetAccountDetails godoc
 // @Summary Exposes functionality to fetch the details of an account once a user has logged in.
 // @Description Based off the given account identifier in the URI, the account details are looked up.
-// @ID get-string-by-int
+// @AccountID accountId
 // @Produce json
-// @Param accountId path int true "The account identifier returned on login."
+// @Param accountId path int true "The user's account identifier returned on login."
 // @Success 200 {object} models.Account
 // @Failure 404 {object} responses.ErrorResponse
 // @Failure 500 {object} responses.ErrorResponse
