# src/Controllers/ResetPasswordController.go
@@ -10,6 +10,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// ResetPassword godoc
+// @Summary Exposes functionality to reset a user's password.
+// @Description Based on the account identifier and the current password, the system will attempt to update the user's password.
+// @AccountID accountId
+// @Param accountId path string true "The user's account identifier."
+// @Success 200 {object} models.Account
+// @Failure 404 {object} responses.ErrorResponse
+// @Failure 500 {object} responses.ErrorResponse
 func (controller *AccountController) ResetPassword(ctx *gin.Context) {
 	accountID, error := strconv.Atoi(ctx.Param("accountId"))
 
